# nbdev_walkthrough

./: README.md  index.html  newname.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: test.yaml
nbdev_walkthrough/: _modidx.py  newname.py
nbs/: 00_newname.ipynb  index.ipynb  nbdev.yml
