[tool.poetry]
name = "nbdev-walkthrough"
version = "0.1.0"
description = ""
authors = ["bobbyjacob-mw <bobby.jacob@mavenwave.com>"]
readme = "README.md"
packages = [{include = "nbdev_walkthrough"}]

[tool.poetry.dependencies]
python = "^3.10"
nbdev = "^2.3.12"
jupyterlab-quarto = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
